Поправлены замечания, доработан файл api-tests.yml